[tool.poetry]
name = "pathfinder-framework"
version = "0.1.0"
description = ""
authors = ["JohnVonNeumann <louis@zerotwentyfifty.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycountry = "^23.12.11"
casregnum = "^1.0.1"
urnparse = "^0.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
sphinx = "^7.3.7"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
