[tool.poetry]
name = "pact-methodology"
version = "0.0.2"
description = ""
authors = ["JohnVonNeumann <louis@zerotwentyfifty.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycountry = "^23.12.11"
casregnum = "^1.0.1"
urnparse = "^0.2.1"
python-dateutil = "^2.9.0.post0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
sphinx = "^7.3.7"
pytest-cov = "^5.0.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
